Orders: fix caching status

--- a/app/views/pages/orders/line_items/create.liquid
+++ b/app/views/pages/orders/line_items/create.liquid
@@ -6,7 +6,8 @@ slug: orders/line_items
   function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
 
   function item = 'lib/data/queries/items/find', id: context.params.line_item.item_id
-  function object = 'lib/commands/line_items/create', item: item, params: context.params.line_item, current_profile: current_profile
+  function order = 'lib/commands/line_items/find_or_create_order', item: item, current_profile: current_profile
+  function object = 'lib/commands/line_items/create', item: item, params: context.params.line_item, current_profile: current_profile, order: order
   if object.valid
     function result = 'lib/commands/orders/recalculate', order_id: object.order_id
     function order_url = 'link_to', order: object.order
