--- a/app/views/partials/test/commands/line_items/create_test.liquid
+++ b/app/views/partials/test/commands/line_items/create_test.liquid
@@ -20,7 +20,8 @@
   function item = 'lib/commands/items/create', object: item_data, owner: seller.id
   hash_assign item['owner'] = seller
   assign params = '{"quantity": "2"}' | parse_json
-  function line_item = 'lib/commands/line_items/create', item: item, params: params, current_profile: buyer
+  function order = 'lib/commands/line_items/find_or_create_order', item: item, current_profile: buyer
+  function line_item = 'lib/commands/line_items/create', item: item, params: params, current_profile: buyer, order: order
 
   include 'test/assertions/valid_object', contract: contract, object: item, field_name: 'item'
   include 'test/assertions/valid_object', contract: contract, object: line_item, field_name: 'line_item'
