--- a/app/views/partials/theme/simple/profile/card.liquid
+++ b/app/views/partials/theme/simple/profile/card.liquid
@@ -1,10 +1,17 @@
-<div class="flex flex-col mb-5">
-  {% liquid
-    assign img_url = user.avatar.photo.versions.small
-    unless img_url
-      assign img_url = 'images/user.svg' | asset_url
-    endunless
-  %}
+{% liquid
+assign img_url = user.avatar.photo.versions.small
+unless img_url
+	assign img_url = 'images/user.svg' | asset_url
+endunless
+%}
 
-  <img src="{{ img_url }}" alt="Picture of {{ user.name }}" class="object-cover object-center w-32 h-32 mx-auto text-gray-400 rounded-full shadow-md md:mx-0">
-</div>
+<img src="{{ img_url }}" alt="Picture of {{ user.name }}" class="inline-block object-cover object-center w-32 h-32 rounded-full shadow-md mb-5">
+
+
+{% liquid
+	assign name = user.first_name | append: ' ' | append: user.last_name
+	unless name
+		assign name = user.name
+	endunless
+	%}
+<h2 class="mb-10 text-xl">{{ name }}</h2>
