--- a/modules/chat/public/views/partials/channels/conversate.html.liquid
+++ b/modules/chat/public/views/partials/channels/conversate.html.liquid
@@ -24,19 +24,21 @@
   log context["params"]
 
   if context["params"]["create"] == true
+	assign message_safe = context["params"]["message"] | raw_escape_string
+
     if conversation.models.results.size > 0
       assign conversation_id = conversation.models.results.first.id
       graphql message = "modules/chat/find_message", from_id: fromId, to_id: toId, conversation_id: conversation_id, timestamp: context["params"]["timestamp"]
 
       if message.models.results.size == 0
-        graphql result = 'modules/chat/create_message', conversation_id: conversation_id, message: context["params"]["message"], timestamp: context["params"]["timestamp"], from_id: fromId, to_id: toId
+        graphql result = 'modules/chat/create_message', conversation_id: conversation_id, message: message_safe, timestamp: context["params"]["timestamp"], from_id: fromId, to_id: toId
         log result, type: 'channel_actions/conversate create_message'
       endif
     else
       graphql conv = 'modules/chat/create_conversation', from_id: fromId, to_id: toId
       log conv, type: 'channel_actions/conversate create_conversation'
 
-      graphql result = 'modules/chat/create_message', conversation_id: conv.model_create.id, message: context["params"]["message"], timestamp: context["params"]["timestamp"], from_id: fromId, to_id: toId
+      graphql result = 'modules/chat/create_message', conversation_id: conv.model_create.id, message: message_safe, timestamp: context["params"]["timestamp"], from_id: fromId, to_id: toId
       log result, type: 'channel_actions/conversate create_message'
     endif
   else
