Added a blank state to chat page

--- a/modules/chat/public/views/pages/inbox.html.liquid
+++ b/modules/chat/public/views/pages/inbox.html.liquid
@@ -38,6 +38,8 @@ slug: inbox
 
 		if current_conversation != blank
 			render 'modules/chat/inbox/conversations', current_conversation: current_conversation, conversations: conversations, current_user: current_user, messages: messages
+		else
+			render 'modules/chat/inbox/blank'
 		endif
 
 	endif
