--- a/app/views/partials/theme/simple/layout/header.liquid
+++ b/app/views/partials/theme/simple/layout/header.liquid
@@ -22,8 +22,10 @@
                 {% endif %}
                 <a href="/dashboard" class="p-3 hover:text-gray-900">{{ 'app.header.feed' | t }}</a>
 				<a href="/inbox" class="p-3 hover:text-gray-900" id='inbox-notifications' data-current-user-id="{{ profile.id }}" data-current-user-slug="{{ profile.slug }}">
-					<p>{{ 'app.header.chat' | t }}</p>
-					<span id="notificationsBell" class="relative inline-flex rounded-full h-3 w-3 bg-pink-500 hidden"></span>
+					<p class="relative">
+						{{ 'app.header.chat' | t }}
+						<span id="notificationsBell" style="top: -2px; right: -10px;" class="absolute rounded-full h-3 w-3 bg-pink-500 hidden"></span>
+					</p>
 				</a>
 
                 <div x-data="{ dropdownOpen: false }" class="relative">
