Topics: style posts; add styles for markdown blocks
Topics: use comments to store questions

Add tags

Questions: accept answer

Questions: cache score for question

Questions: style

Questions: move from comments to posts

Posts: add admin pages

--- a/app/views/partials/lib/data/queries/comments/search.liquid
+++ b/app/views/partials/lib/data/queries/comments/search.liquid
@@ -1,6 +1,9 @@
 {% liquid
-  graphql r = 'comments/search', limit: limit, page: 1
+  if commentable_uuid_exists == 'false'
+    assign commentable_uuid_exists = false
+  endif
+  graphql r = 'comments/search', limit: limit, page: 1, commentable_uuid_exists: commentable_uuid_exists
   include 'lib/handle_graphql_response', r: r, name: 'queries/comments/search'
 
-  return r.models
+  return r.comments
 %}
