--- a/app/views/partials/theme/simple/dashboard/sidebar.liquid
+++ b/app/views/partials/theme/simple/dashboard/sidebar.liquid
@@ -62,6 +62,7 @@
 
       {% include 'theme/simple/dashboard/sidebar_link', href: "/dashboard", label: 'app.p-dashboard.your-feed' %}
       {% include 'theme/simple/dashboard/sidebar_link', href: "/dashboard/groups", label: 'app.p-dashboard.my-groups' %}
+      {% include 'theme/simple/dashboard/sidebar_link', href: "/dashboard/posts", label: 'app.p-dashboard.posts' %}
     </div>
   </nav>
 </div>
