--- a/app/views/partials/test/assertions/equal.liquid
+++ b/app/views/partials/test/assertions/equal.liquid
@@ -1,6 +1,7 @@
 {% liquid
   if given != expected
     assign msg = 'test.should.equal' | t: given: given, expected: expected
-    include 'test/register_error', contract: contract, field_name: field_name, message: msg
+    function contract = 'test/register_error_f', contract: contract, field_name: field_name, message: msg
   endif
+  return contract
 %}
