--- a/app/views/partials/test/assertions/presence.liquid
+++ b/app/views/partials/test/assertions/presence.liquid
@@ -1,5 +1,6 @@
 {% liquid
   if object[field_name] == blank
-    include 'test/register_error', contract: contract, field_name: field_name, key: 'test.should.not.be_blank'
+    function contract = 'test/register_error_f', contract: contract, field_name: field_name, key: 'test.should.not.be_blank'
   endif
+  return contract
 %}
