--- a/app/views/partials/test/assertions/valid_object.liquid
+++ b/app/views/partials/test/assertions/valid_object.liquid
@@ -1,5 +1,6 @@
 {% liquid
   if object.valid != true
-    include 'test/register_error', contract: contract, field_name: field_name, message: object.errors
+    function contract = 'test/register_error_f', contract: contract, field_name: field_name, message: object.errors
   endif
+  return contract
 %}
