--- a/app/views/partials/theme/simple/layout/header.liquid
+++ b/app/views/partials/theme/simple/layout/header.liquid
@@ -14,6 +14,7 @@
             <a href="/dashboard/items/new" class="p-3 hover:text-gray-900">{{ 'app.header.add' | t }}</a>
             <a href="/search" class="p-3 hover:text-gray-900">{{ 'app.items.list' | t }}</a>
             <a href="/groups" class="p-3 hover:text-gray-900">{{ 'app.groups.list' | t }}</a>
+            <a href="/posts" class="p-3 hover:text-gray-900">{{ 'app.models.posts.list' | t }}</a>
 
             {% if context.current_user.id %}
                 {% assign superadmins = context.constants.superadmins | split: ',' %}
