--- a/scaffold/generators/crud/templates/views/partials/lib/commands/model/create/check.liquid
+++ b/scaffold/generators/crud/templates/views/partials/lib/commands/model/create/check.liquid
@@ -2,10 +2,7 @@
   assign c = '{ "errors": {}, "valid": true }' | parse_json
 
 <% attributes.forEach((attr, i) => { -%>
-  if object.<%= attr.name %> == blank
-    include 'lib/register_error', contract: c, field_name: '<%= attr.name %>', key: 'app.errors.blank'
-  endif
-
+  function c = 'lib/validations/presence', c: c, object: object, field_name: '<%= attr.name %>'
 <% }); -%>
 
   hash_assign object['valid'] = c.valid
