--- a/scaffold/generators/crud/templates/views/partials/lib/commands/model/update/check.liquid
+++ b/scaffold/generators/crud/templates/views/partials/lib/commands/model/update/check.liquid
@@ -1,15 +1,9 @@
 {% liquid
   assign c = '{ "errors": {}, "valid": true }' | parse_json
 
-  if object.id == blank
-    include 'lib/register_error', contract: c, field_name: 'id', key: 'app.errors.blank'
-  endif
-
+  function c = 'lib/validations/presence', c: c, object: object, field_name: 'id'
 <% attributes.forEach((attr, i) => { -%>
-  if object.<%= attr.name %> == blank
-    include 'lib/register_error', contract: c, field_name: '<%= attr.name %>', key: 'app.errors.blank'
-  endif
-
+  function c = 'lib/validations/presence', c: c, object: object, field_name: '<%= attr.name %>'
 <% }); -%>
 
   hash_assign object['valid'] = c.valid
