--- a/app/views/pages/profile/index.liquid
+++ b/app/views/pages/profile/index.liquid
@@ -37,9 +37,8 @@ slug: profile
 
   graphql conversation = 'modules/chat/find_conversation', from_id: current_profile.id, to_id: profile.id
   graphql messages = 'modules/chat/find_messages', conversation_id: conversation.models.results.first.id
-  assign chat_enabled = context.constants.USE_WEBSOCKET_CHAT
 
-  render 'theme/simple/profile/show', section: section, user: profile, list: list, current_profile: current_profile, conversation: conversation, messages: messages, chat_enabled: chat_enabled
+  render 'theme/simple/profile/show', section: section, user: profile, list: list, current_profile: current_profile, conversation: conversation, messages: messages
   render 'theme/simple/items/follow.js', authenticity_token: context.authenticity_token
   render 'theme/simple/groups/join.js', authenticity_token: context.authenticity_token
 %}
