--- a/app/views/partials/theme/simple/dashboard/orders/show.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/show.liquid
@@ -17,7 +17,7 @@
   
   {% for line_item in order.line_items %}
     {% function item_url = 'link_to', item: line_item.item %}
-    <article class="lg:flex gap-2 mb-5 pt-5 border-t">
+    <article class="lg:flex gap-2 mb-5 last:mb-0 pb-5 last:pb-0 border-b last:border-b-0">
       <div class="lg:w-8/12">
         <a href="{{ item_url }}" class="flex items-center">
           {% function cover_url = 'theme/simple/items/cover_url', item: line_item.item %}
