--- a/app/views/partials/theme/simple/contacts/show.liquid
+++ b/app/views/partials/theme/simple/contacts/show.liquid
@@ -1,25 +1,22 @@
-<h1 class="text-4xl font-medium text-center">
-  contact - {{ contact.id }}
-</h1>
+<article class="p-8 text-gray-800 bg-white shadow-lg rounded">
 
-<span class="font-medium">
-  {{ 'app.models.contacts.form.email' | t }}
-</span>
-<p class="mb-10">
-  {{ contact.email }}
-</p>
+  <h1 class="mb-5 border-b text-4xl font-medium">
+    contact - {{ contact.id }}
+  </h1>
 
-<span class="font-medium">
-  {{ 'app.models.contacts.form.message' | t }}
-</span>
-<p class="mb-10">
-  {{ contact.message }}
-</p>
+  <div class="mt-5 font-medium">
+    {{ 'app.models.contacts.form.email' | t }}
+  </div>
+  <a href="mailto:{{ contact.email }}">{{ contact.email }}</a>
 
-<span class="font-medium">
-  {{ 'app.models.contacts.form.reason' | t }}
-</span>
-<p class="mb-10">
+  <div class="mt-5 font-medium">
+    {{ 'app.models.contacts.form.reason' | t }}
+  </div>
   {{ contact.reason }}
-</p>
 
+  <div class="mt-5 font-medium">
+    {{ 'app.models.contacts.form.message' | t }}
+  </div>
+  {{ contact.message }}
+
+</article>
