--- a/app/views/partials/test/commands/line_items/create_test.liquid
+++ b/app/views/partials/test/commands/line_items/create_test.liquid
@@ -13,10 +13,18 @@
     "name":        "item-name",
     "description": "item-description",
     "price":       10,
-    "uuid":        "item.uuid"
+    "uuid":        "item.uuid",
+    "category":    "hoodies"
   }
 {% endparse_json %}
+{% parse_json category_data %}
+  {
+    "key": "hoodies"
+  }
+{% endparse_json %}
+
 {% liquid
+  function category = 'lib/commands/categories/create', object: category_data
   function item = 'lib/commands/items/create', object: item_data, owner: seller.id
   hash_assign item['owner'] = seller
   assign params = '{"quantity": "2"}' | parse_json
