Localize long date now used in admin panel activities

--- a/app/views/partials/theme/simple/activities/feed_unit/header.liquid
+++ b/app/views/partials/theme/simple/activities/feed_unit/header.liquid
@@ -45,7 +45,7 @@
 			endcase
 			%}
 
-			<time datetime="{{ date }}" class="block mt-1 text-sm text-gray-500">{{ date | strftime: '%F at %H:%M' }}</p>
+			<time datetime="{{ date }}" class="block mt-1 text-sm text-gray-500">{{ date | localize: 'long' }}</p>
 		</p>
 	</div>
 </div>
