--- a/modules/chat/public/views/partials/message_button.liquid
+++ b/modules/chat/public/views/partials/message_button.liquid
@@ -10,7 +10,7 @@
 
 <div class="mt-3">
   <a href="/inbox/{{ params }}" class="button whitespace-no-wrap chat-sendMessage">
-    {{ 'app.chat.send_message' | t }}
+    {{ 'app.send_message' | t }}
     <svg class="w-4 ml-3" xmlns="http://www.w3.org/2000/svg" focusable="false" viewBox="0 0 24 24" fill="currentColor"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M20 2H4c-1.1 0-2 .9-2 2v18l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm0 14H6l-2 2V4h16v12z"/></svg>
   </a>
 </div>
