--- a/app/views/partials/theme/simple/posts/vote_box.liquid
+++ b/app/views/partials/theme/simple/posts/vote_box.liquid
@@ -1,8 +1,8 @@
-<form action="/dashboard/posts/vote" method="post" data-tc="voteup">
+<form action="/dashboard/posts/vote" method="post">
   {% include 'authenticity_token' %}
   <input type="hidden" name="post[id]" value="{{ post.id }}"/>
   <input type="hidden" name="post[type]" value="{% if post.upvote_profile_ids contains current_profile.id %}clear{% else %}up{% endif %}"/>
-  <button class="{% if post.upvote_profile_ids contains current_profile.id %}text-orange-600{% endif %}">
+  <button class="{% if post.upvote_profile_ids contains current_profile.id %}text-orange-600{% endif %}" data-tc="voteup">
     <svg class="w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7" /> </svg>
   </button>
 </form>
