Updated to Tailwind 2.0

--- a/app/views/partials/theme/simple/home/search_form.liquid
+++ b/app/views/partials/theme/simple/home/search_form.liquid
@@ -1,4 +1,4 @@
-<div class="flex flex-wrap lg:flex-no-wrap items-end my-6">
+<div class="flex flex-wrap lg:flex-nowrap items-end my-6">
   <div class="w-full mb-5 lg:mb-0 flex-0 lg:flex-1 lg:w-auto">
     <label for="k" class="block mb-1 w-full capitalize">{{ 'app.search.keywords' | t }}</label>
     <input class="w-full form-input"
