--- a/app/views/pages/index.html.liquid
+++ b/app/views/pages/index.html.liquid
@@ -1,19 +1,5 @@
 {% liquid
-  function current_profile = 'lib/current_profile', user_id: context.current_user.id, followships: true
+  function posts = 'lib/queries/posts/search', limit: 100, parent_id_exists: false
 
-  function items = 'lib/queries/activities/search', feed: 'system', feed_id: "5", limit: 3
-  function comments = 'lib/queries/activities/search', feed: 'system', feed_id: "2", limit: 3
-  function groups = 'lib/queries/activities/search', feed: 'system', feed_id: "3", limit: 3
-  function profiles = 'lib/queries/activities/search', feed: 'system', feed_id: "4", limit: 3
-  function categories = 'lib/queries/categories/search', limit: 3
-
-  assign feeds = '{}' | parse_json
-  hash_assign feeds['categories'] = categories
-  hash_assign feeds['items'] = items
-  hash_assign feeds['comments'] = comments
-  hash_assign feeds['groups'] = groups
-  hash_assign feeds['profiles'] = profiles
-
-  include 'theme/simple/home/index', feeds: feeds, current_profile: current_profile
-  render 'theme/simple/items/follow.js', authenticity_token: context.authenticity_token
+  include 'theme/simple/posts/index', posts: posts
 %}
