--- a/app/views/partials/lib/commands/posts/create/build.liquid
+++ b/app/views/partials/lib/commands/posts/create/build.liquid
@@ -4,7 +4,7 @@
     "parent_id": {{ object.parent_id | json }},
     "creator_id": {{ current_profile.id | json }},
     "title": {{ object.title | json }},
-    "body": {{ object.body | json }},
+    "body": {% print object.body | json %},
     "tags": {{ object.tags | downcase | split: ',' | uniq }},
     "c__score": {{ object.c__score | json }}
   }
