check if item category exists

--- a/app/views/partials/lib/commands/items/create/check.liquid
+++ b/app/views/partials/lib/commands/items/create/check.liquid
@@ -1,6 +1,7 @@
 {% assign MINIMAL_PRICE = 10 | times: 100 %}
 {% assign MAXIMAL_PRICE = 100000 | times: 100 %}
 
+
 {% liquid
   assign c = '{ "errors": {}, "valid": true }' | parse_json
 
@@ -10,6 +11,16 @@
 
   if object.name == blank
     include 'lib/register_error', contract: c, field_name: 'name', key: 'app.errors.blank'
+  endif
+
+
+  if object.category == blank
+    include 'lib/register_error', contract: c, field_name: 'category', key: 'app.errors.blank'
+  else
+    function category = 'lib/queries/categories/find', key: object.category
+    unless category
+      include 'lib/register_error', contract: c, field_name: 'category', key: 'app.errors.disallowed'
+    endunless
   endif
 
   if object.price <  MINIMAL_PRICE
