--- a/app/views/partials/lib/queries/categories/find.liquid
+++ b/app/views/partials/lib/queries/categories/find.liquid
@@ -1,9 +1,9 @@
 {% liquid
-  if id == blank
+  if id == blank and key == blank
     return null
   endif
 
-  graphql r  = 'categories/search', id: id, limit: 1
+  graphql r  = 'categories/search', id: id, key: key, limit: 1
 
   return r.categories.results.first
 %}
