--- a/src/css/base/body.css
+++ b/src/css/base/body.css
@@ -1,8 +1,12 @@
-body {
-  @apply antialiased;
-}
+/*
+  links
+  typography
+*/
 
-/* purgecss start ignore */
+
+
+/* links
+============================================================================ */
 main a[href] {
   @apply text-blue-700;
 }
@@ -10,7 +14,16 @@ main a[href] {
 main a[href]:hover {
   @apply text-blue-600;
 }
-/* purgecss end ignore */
+
+
+
+/* typography
+============================================================================ */
+main p + p {
+  @apply mt-4;
+}
+
+
 
 /* used by alpine.js to mark items before JS initializes */
 [x-cloak] {
