--- a/app/views/pages/dashboard/posts/accept.liquid
+++ b/app/views/pages/dashboard/posts/accept.liquid
@@ -4,7 +4,7 @@ method: post
 ---
 {% liquid
   function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
-  function post = 'lib/queries/posts/find', id: context.params.post.id
+  function post = 'lib/queries/posts/find', id: context.params.post.id, creator_id: current_profile.id
   include 'lib/present_or_404', property: post.id
 
   function object = 'lib/commands/posts/accept', object: context.params.post, current_profile: current_profile, post: post
