--- a/app/views/pages/dashboard/posts/delete.liquid
+++ b/app/views/pages/dashboard/posts/delete.liquid
@@ -3,8 +3,11 @@ slug: dashboard/posts
 method: delete
 ---
 {% liquid
-  function object = 'lib/queries/posts/find', id: context.params.id
-  function object = 'lib/commands/posts/delete', object: object
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function post = 'lib/queries/posts/find', id: context.params.id, creator_id: current_profile.id
+  include 'lib/present_or_404', property:  post.id
+
+  function object = 'lib/commands/posts/delete', object: post
 
   if object.valid
     include 'redirect_to', url: '/dashboard/posts', notice: 'app.models.shared.deleted'
