--- a/app/views/pages/dashboard/posts/update.liquid
+++ b/app/views/pages/dashboard/posts/update.liquid
@@ -3,6 +3,10 @@ slug: dashboard/posts
 method: put
 ---
 {% liquid
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function post = 'lib/queries/posts/find', id: context.params.post.id, creator_id: current_profile.id
+  include 'lib/present_or_404', property:  post.id
+
   function object = 'lib/commands/call', object: context.params.post, command: 'posts/update', selection: 'model_update'
   if object.valid
     include 'redirect_to', url: '/dashboard/posts'
