--- a/app/views/partials/lib/queries/posts/find.liquid
+++ b/app/views/partials/lib/queries/posts/find.liquid
@@ -3,7 +3,7 @@
     return null
   endif
 
-  graphql r  = 'posts/search', id: id, limit: 1
+  graphql r  = 'posts/search', id: id, limit: 1, creator_id: creator_id
 
   return r.posts.results.first
 %}
